tests/good/interpret/059-different-order-constr-patt.clap
val x = (case { { A, B } => 42 }) ({ B, A })

