tests/bad/typing/018-user-defined-types-mismatch.clap
type t1 = { A }
type t2 = { B }
val x : t1 = ({ B } : t2)
